<resources>
    <string name="app_name">EdgeCare</string>
    <string name="login">Log In</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="welcomeMessage">Welcome!</string>
    <string name="input_text_hint">Type a message</string>
    <string name="new_edge_care">EdgeCare</string>
    <string name="persona">Persona</string>
    <string name="health_reports">Health Reports</string>
    <string name="offline_chat">Offline Help</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="question_end_message">We are all set up! Your profile has been created successfully</string>
    <string name="finish">Finish</string>
    <string name="main_component_tip">If you\'re experiencing <font color="#3E9EFF">serious symptoms</font>, do not use EdgeCare. Instead, please contact emergency services quickly.</string>
    <string name="questionnaire_topic">Add Profile Details</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="health_profile">Health Profile</string>
    <string name="basic_information">Basic Information</string>
    <string name="medical_information">Medical Information</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="name">Name</string>
    <string name="enter_your_birth_date">Enter your birth date</string>
    <string name="specify_your_gender">Specify your gender</string>
    <string name="allergies">Allergies</string>
    <string name="list_any_allergies_you_have">List any allergies you have</string>
    <string name="health_background">Health Background</string>
    <string name="provide_details_about_your_health_history">Provide details about your health history</string>
    <string name="are_you_a_current_or_past_smoker">Are you a current or past smoker?</string>
    <string name="smoking">Smoking</string>
    <string name="enter_your_height_in_cm">Enter your height in cm</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="enter_your_weight_in_kg">Enter your weight in kg</string>
    <string name="lifestyle_information">Lifestyle Information</string>
    <string name="alcohol_consumption">Alcohol Consumption</string>
    <string name="do_you_consume_alcohol">Do you consume alcohol?</string>
    <string name="have_you_ever_been_diagnosed_with_high_blood_pressure">Have you ever been diagnosed with high blood pressure?</string>
    <string name="high_blood_pressure">High Blood Pressure</string>
    <string name="toSignUp">Not Registered Yet? <font color="#3E9EFF"> Sign Up !</font> </string>
    <string name="type_here">Type here…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toLogIn">Already hava an account? <font color="#3E9EFF">Log in</font></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="appLogo">App Logo</string>
    <string name="icon">icon</string>
    <string name="select_your_birthday">Select your birthday</string>
    <string name="offline_model_loading_text">Model copying in progress…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_offline_model">By Offline Model</string>

</resources>